--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.2.0",
     "@nextui-org/react": "^2.4.1",
+    "@supabase/supabase-js": "^2.43.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +26,7 @@
     "sonner": "^1.4.41"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
